<?xml version="1.0" encoding="utf-8"?>
<!--This menu renders the Navigation Drawer list items.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_action_users"
            android:title="@string/nav_users" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_action_reservations_list"
            android:title="@string/nav_reservations" />
        <item
            android:id="@+id/nav_reasons"
            android:icon="@drawable/ic_action_list"
            android:title="@string/nav_reasons" />
        <item
            android:id="@+id/nav_locals"
            android:icon="@drawable/ic_action_list"
            android:title="@string/nav_locals" />
        <item
            android:id="@+id/nav_roles"
            android:icon="@drawable/ic_action_list"
            android:title="@string/nav_roles" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_action_profile"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_guide"
                android:icon="@drawable/ic_action_guide"
                android:title="@string/nav_guide" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>