<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tp1.e_cebanu.tp1.fragments.LocalsFragment">

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/listButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add"
                    style="@style/BootstrapButtonSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/update"
                    style="@style/BootstrapButtonInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/delete"
                    style="@style/BootstrapButtonDanger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>

            <ListView
                android:id="@+id/list"
                style="@style/ListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/listButtons"
                android:visibility="gone" />
        </RelativeLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:alpha="0.3"
            android:src="@drawable/ic_action_list" />
    </FrameLayout>

    <!-- Footer aligned to bottom -->
    <include layout="@layout/footer" />
</RelativeLayout>
