<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="2"
            android:visibility="gone"></EditText>
        <!--LOCAL-->
        <TextView
            android:id="@+id/text_view_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etId"
            android:layout_alignBottom="@+id/etId"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/lbLocal"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/txtDate" />

        <Spinner
            android:id="@+id/etLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etId"
            android:layout_toEndOf="@+id/text_view_local"
            android:padding="7dp"
            android:prompt="@string/locals_prompt">

            <requestFocus />
        </Spinner>

        <!--DATE RESERVATION-->
        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etLogin"
            android:layout_alignParentStart="@+id/text_view_local"
            android:layout_below="@+id/etLocal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/lbDateReservation"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setDate"
            android:layout_below="@+id/etLocal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/text_view_date" />

        <TextView
            android:id="@+id/txtDateTymeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@+id/text_view_date"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textStyle="bold"/>

        <!--Button
            android:id="@+id/changeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ? date"
            style="@style/BootstrapButtonInfo"
            android:layout_below="@+id/etLocal"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/delete" /-->


        <!--DatePicker
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text_view_date"
            android:layout_below="@+id/etLocal"
            android:padding="5dp"/-->

<!--
        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etPassword"
            android:layout_below="@+id/text_view_date"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/login"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNom"
            android:layout_toRightOf="@+id/text_view_login"
            android:maxLines="2"
            android:minLines="2"
            android:padding="5dp"></EditText>

        <TextView
            android:id="@+id/text_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etPassword"
            android:layout_below="@+id/text_view_login"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/label_password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLogin"
            android:layout_toRightOf="@+id/text_view_password"
            android:maxLines="2"
            android:minLines="2"
            android:padding="5dp"></EditText>


        <TextView
            android:id="@+id/text_view_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etRole"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/etRole"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:text="@string/role"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/etRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_password"
            android:layout_toEndOf="@+id/text_view_password"
            android:entries="@array/locations_types"
            android:padding="7dp"
            android:prompt="@string/roles_prompt" />
-->
        <Button
            android:id="@+id/update"
            style="@style/BootstrapButtonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDateTymeStamp"
            android:text="@string/update"
            android:visibility="visible" />

        <Button
            android:id="@+id/delete"
            style="@style/BootstrapButtonDanger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtDateTymeStamp"
            android:text="@string/delete"
            android:visibility="visible" />




    </RelativeLayout>
</ScrollView>